--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200&family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&family=Poppins&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./style/style.css">
         <title>Web3CIV</title>
 </head>
 <body>
+        <section class="upper">
         <nav class="nav_menu">
                 <h2 id="logo">Web3CIv</h2>
 
@@ -21,17 +25,17 @@
         </nav>
 
         <!-- hero section -->
-        <section>
-                <div>
+        <section class="hero">
+                <div class="text">
 
-                        <h3>Hi I'm  </h3>
-                        <h1>Mary Hardy</h1>
-                        <h3>Digital marketing expert</h3>
-                        <p>Shot what able cold new the see hold. Friendly as an betrayed formerly he. Morning because as to society behaved moments</p>
+                        <h5> Hi, I'm </h5>
+                        <h1> Mary Hardy</h1>
+                        <h4>Digital marketing expert</h4>
+                        <p>Shot what able cold new the see hold. Friendly as an betrayed <br>formerly he. Morning because as to society behaved moments.</p>
 
-                        <div>
-                                <button>Download cv</button>
-                                <button>contact</button>
+                        <div class="button">
+                                <button class="download">Download CV</button>
+                                <button class="contact">Contact</button>
                         </div>
                         
                 </div>
@@ -43,6 +47,6 @@
          
         </section>
 
-
+</section>
 </body>
 </html>
